# amelethdf/src/lib CMakeList.txt file

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${AMELETHDF_HL_DEP_INCLUDE_DIRS})

FILE(GLOB_RECURSE amelethdf_src *.c)

ADD_LIBRARY(amelethdfc_hl SHARED ${amelethdf_src})
SET_TARGET_PROPERTIES(amelethdfc_hl PROPERTIES 
  OUTPUT_NAME "amelethdfc_hl")

TARGET_LINK_LIBRARIES(amelethdfc_hl ${AMELETHDF_DEP_LINK_LIBS})

INSTALL(TARGETS amelethdfc_hl
  EXPORT  AmeletHDFHLLibraryDepends
  RUNTIME       DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
  LIBRARY       DESTINATION "${INSTALL_LIB_DIR}" COMPONENT lib
  ARCHIVE       DESTINATION "${INSTALL_LIB_DIR}" COMPONENT lib
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}"
  COMPONENT dev
  )

FILE(GLOB_RECURSE amelethdf_header *.h)
INSTALL(FILES ${amelethdf_header} DESTINATION "include")

