# amelethdf/src/lib CMakeList.txt file

INCLUDE_DIRECTORIES(${AMELETHDF_HL_INCLUDE_DIRS})

FILE(GLOB_RECURSE amelethdf_src *.c)

ADD_DEFINITIONS(-DAMELETHDF_C_HL_LIBRARY)
ADD_LIBRARY(amelethdfc_hl SHARED ${amelethdf_src})
SET_TARGET_PROPERTIES(amelethdfc_hl PROPERTIES 
  OUTPUT_NAME "amelethdfc_hl")

TARGET_LINK_LIBRARIES(amelethdfc_hl  ${AMELETHDF_HL_DEP_LINK_LIBS})

INSTALL(TARGETS amelethdfc_hl
  EXPORT  AmeletHDFLibraryDepends
  RUNTIME       DESTINATION "${INSTALL_BIN_DIR}"
  LIBRARY       DESTINATION "${INSTALL_LIB_DIR}"
  ARCHIVE       DESTINATION "${INSTALL_LIB_DIR}"
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}"
  )

FILE(GLOB_RECURSE amelethdf_header *.h)
INSTALL(FILES ${amelethdf_header} DESTINATION "include")

