# amelethdf/src/lib CMakeList.txt file

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${AMELETHDF_DEP_INCLUDE_DIRS})

FILE(GLOB_RECURSE amelethdf_src *.c)

ADD_DEFINITIONS(-DAMELETHDF_C_LIBRARY)
ADD_LIBRARY(amelethdfc SHARED ${amelethdf_src})
SET_TARGET_PROPERTIES(amelethdfc PROPERTIES 
  OUTPUT_NAME "amelethdfc")

TARGET_LINK_LIBRARIES(amelethdfc ${AMELETHDF_DEP_LINK_LIBS})

INSTALL(TARGETS amelethdfc
  EXPORT  AmeletHDFLibraryDepends
  RUNTIME       DESTINATION "${INSTALL_BIN_DIR}"
  LIBRARY       DESTINATION "${INSTALL_LIB_DIR}"
  ARCHIVE       DESTINATION "${INSTALL_LIB_DIR}"
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}"
  )

FILE(GLOB_RECURSE amelethdf_header *.h)
INSTALL(FILES ${amelethdf_header} DESTINATION "include")


